--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "underscore-snippets",
     "displayName": "Underscore Snippets",
     "description": "Underscore Snippets for VS Code",
-    "version": "0.0.1",
+    "version": "1.0.0",
     "publisher": "jangopro",
     "engines": {
         "vscode": "^1.21.0"
@@ -17,5 +17,9 @@
                 "path": "./snippets/snippets.json"
             }
         ]
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/jangopro/underscore-snippets.git"
     }
 }
